oxiplate/tests/broken/extends-extends.stderr
error: Only block statements are allowed here, along with comments and whitespace.
 --> tests/broken/extends-extends.rs:4:68
  |
4 | #[oxiplate_inline = r#"{% extends "extends-wrapper.html.oxip" %}{% extends "extends-wrapper.html.oxip" %}"#]
  |                                                                    ^^^^^^^

error[E0392]: type parameter `F` is never used
 --> tests/broken/extends-extends.rs:4:36
  |
4 | #[oxiplate_inline = r#"{% extends "extends-wrapper.html.oxip" %}{% extends "extends-wrapper.html.oxip" %}"#]
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ unused type parameter
  |
  = help: consider removing `F`, referring to it in a field, or using a marker such as `PhantomData`
